Adding first version of slides

--- a/2012-09-27.md
+++ b/2012-09-27.md
@@ -4,6 +4,9 @@
 title: Vimgolf by example
 author: Gregor Schmidt
 
+%%%%%%%%
+%% vim -R -Z -n --noplugin -i NONE +0 -u "~/.vimgolf/put/50048db8cdc4060002000004.golfrc" "~/.vimgolf/put/50048db8cdc4060002000004.txt"
+%% vim put 50048db8cdc4060002000004
 
 %%%%%%%%%%%%%%
 %% Let's go.
@@ -16,7 +19,103 @@ What to expect?
 - Fun, Fun, Fun
 
 
-The task
-========
+The task: "Vertical Limit"
+==========================
 
 
+*transform a succession of one word lines to a an array of strings*
+
+[Challenge #50048db8cdc4060002000004](http://vimgolf.com/challenges/50048db8cdc4060002000004)
+
+
+Paris
+=====
+
+    There
+    is
+    no
+    vertical
+    limit
+    for
+    vim
+    Ninjas
+
+
+Dakar
+=====
+
+    [ "There", "is", "no", "vertical", "limit", \
+    "for", "vim", "Ninjas" ]
+
+
+1st Attempt
+===========
+
+26 keystrokes
+
+    :%s/\n/", "<CR>i[ "<Esc>A<BS><BS><BS> ]<Esc>ZZ
+
+
+2nd Attempt
+===========
+
+29 keystrokes
+
+    :,7s/\n/", "<CR>:s/.*/[ "&" ]<CR>ZZ
+
+
+Other ideas?
+============
+
+<textarea rows="7" cols="56"></textarea>
+
+
+3rd Attempt
+===========
+
+25 keystrokes
+
+    :,7s/\n/", "<CR>i[ "<Esc>A" ]<Esc>ZZ
+
+
+4th Attempt
+===========
+
+24 keystrokes
+
+    7:s/\n/", "<CR>i[ "<Esc>A" ]<Esc>ZZ
+
+
+Unfinished 5th Attempt
+======================
+
+23 keystrokes
+
+    7:s/\n/", "<CR>i[ "<END>" ]<Esc>ZZ
+
+ _no `<END>` key on my keyboard_
+
+
+Other ideas?
+============
+
+
+<textarea rows="7" cols="56"></textarea>
+
+
+Other notable approaches
+========================
+
+23 keystrokes (@alextercete)
+
+    i[ <Esc>qaa"<End>",<Esc>Jq7@aR ]<Esc>ZZ
+
+24 keystrokes (@benkomalo)
+
+    A", "<Del><Esc>......A" ]<Home>[ "<Esc>ZZ
+
+
+Thank you for your attention
+============================
+
+Happy vimming!
