Improving first slide

--- a/2012-09-27.md
+++ b/2012-09-27.md
@@ -14,18 +14,20 @@ author: Gregor Schmidt
 What to expect?
 ===============
 
-- Training on the job
-- Learning from _real world examples_
+- Learn
+  - from _real-world examples_
+  - from others
+
 - Fun, Fun, Fun
 
 
 The task: "Vertical Limit"
 ==========================
 
-
-*transform a succession of one word lines to a an array of strings*
-
 [Challenge #50048db8cdc4060002000004](http://vimgolf.com/challenges/50048db8cdc4060002000004)
+
+> transform a succession of one word lines to a an array of strings
+
 
 
 Paris
