Adding 0th attempt

--- a/2012-09-27.md
+++ b/2012-09-27.md
@@ -6,7 +6,7 @@ author: Gregor Schmidt
 
 %%%%%%%%
 %% vim -R -Z -n --noplugin -i NONE +0 -u "~/.vimgolf/put/50048db8cdc4060002000004.golfrc" "~/.vimgolf/put/50048db8cdc4060002000004.txt"
-%% vim put 50048db8cdc4060002000004
+%% vimgolf put 50048db8cdc4060002000004
 
 %%%%%%%%%%%%%%
 %% Let's go.
@@ -48,6 +48,14 @@ Dakar
 
     [ "There", "is", "no", "vertical", "limit", \
     "for", "vim", "Ninjas" ]
+
+
+0th Attempt
+===========
+
+27 keystrokes
+
+    :%s/\n/", "<CR>i[ "<Esc>A<BS><BS><BS> ]<Esc>:x<Enter>
 
 
 1st Attempt
