--- a/_posts/2012-09-01-smava.markdown
+++ b/_posts/2012-09-01-smava.markdown
@@ -1,6 +1,6 @@
 ---
 layout: gig
-title:  "Smava"
+title:  "Smava - Coaching and Consulting JavaScript"
 categories: javascript training consulting implementation
 image: img/smava.png
 description: >
