Replacing some lorem ipsum

--- a/_posts/2012-09-01-smava.markdown
+++ b/_posts/2012-09-01-smava.markdown
@@ -1,14 +1,16 @@
 ---
 layout: gig
-title:  "Smava - Coaching and Consulting JavaScript"
+title: "Smava - Coaching and Consulting JavaScript"
 categories: javascript training consulting implementation
 image: img/smava.png
 description: >
-  I helped [smava](https://www.smava.de) kickstart the reimplementation of their
-  signup funnel. Since new clients need to enter a lot of data, they wanted to
-  create a client-side, multi-step sign up wizard. I was training the team on
-  current JavaScript techniques and frameworks, consulting on the overall design
-  of the software, as well as helping with the implementation.
+  [Smava](https://www.smava.de) offers a peer-to-peer lending service as well as
+  a comparison of tranditional bank credit offers. I helped smava kickstart the
+  reimplementation of their signup funnel. Since new clients need to enter a lot
+  of data, they wanted to create a client-side, multi-step sign up wizard. I was
+  training the team on current JavaScript techniques and frameworks, consulting
+  on the overall design of the software, as well as helping with the
+  implementation.
 
 ---
 
