--- a/_posts/2012-09-01-smava.markdown
+++ b/_posts/2012-09-01-smava.markdown
@@ -5,7 +5,7 @@ categories: javascript training consulting implementation
 image: img/smava.png
 description: >
   [Smava](https://www.smava.de) offers a peer-to-peer lending service as well as
-  a comparison of tranditional bank credit offers. I helped smava kickstart the
+  a comparison of traditional bank credit offers. I helped smava kickstart the
   reimplementation of their signup funnel. Since new clients need to enter a lot
   of data, they wanted to create a client-side, multi-step sign up wizard. I was
   training the team on current JavaScript techniques and frameworks, consulting
