--- a/_posts/2007-5-22-api-docs.markdown
+++ b/_posts/2007-5-22-api-docs.markdown
@@ -1,7 +1,7 @@
---- 
+---
 layout: post
 title: API docs
-permalink: /2007/5/22/api-docs/index.html
+permalink: /2007/5/22/api-docs
 ---
 I'm working on and with [ContextR](http://contextr.rubyforge.org) for some time now. And since I am a proud member of the open source community, I registered ContextR at [ohloh.net](http://www.ohloh.net/projects/5037). It features a basic source code analysis, computing the lines of code for languages used and how many lines are used for comments.
 
