Update permalinks of blog posts to work on 5apps
Also 

* adding some new lines to please vims markdown highlighter
* removing some html markup

--- a/_posts/2007-9-12-euruko-2007.markdown
+++ b/_posts/2007-9-12-euruko-2007.markdown
@@ -1,8 +1,10 @@
 ---
 layout: post
 title: EuRuKo 2007
-permalink: /2007/9/12/euruko-2007
+permalink: /2007/9/12/euruko-2007/
+
 ---
+
 Today the dates for [Euruko
 2007](http://www.approximity.com/cgi-bin/europeRuby/tiki.cgi?c=v&p=Euruko07)
 where announced.
